--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,25 +1,31 @@
 format_version: '8'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: other
-trigger_map:
-- push_branch: "*"
-  workflow: primary
-- pull_request_source_branch: "*"
-  workflow: primary
 workflows:
-  primary:
+  setup:
     steps:
-    - activate-ssh-key@4.0.3:
-        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4.0.14: {}
     - script@1.1.5:
         title: 'bundle install'
         inputs:
         - content: |-
+            gem uninstall bundler --force
+            gem install bundler --force
             bundle install
+  ci:
+    before_run:
+    - setup
+    steps:
     - script@1.1.5:
-        title: 'fastlane push_pod'
+        title: 'lint pod'
+        inputs:
+        - content: |-
+            bundle exec fastlane lint_pod
+  release:
+    before_run:
+    - ci
+    steps:
+    - script@1.1.5:
+        title: 'release pod'
         inputs:
         - content: |-
             bundle exec fastlane push_pod
-    - deploy-to-bitrise-io@1.6.0: {}
